Fix the EFL build after r183595 https://bugs.webkit.org/show_bug.cgi?id=144427

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-04-29
Reviewed by Gyuyoung Kim.

updateWheelEventTestTriggersIfNeeded() is guarded by #if ENABLE(CSS_SCROLL_SNAP) || ENABLE(RUBBER_BANDING).

* WebProcess/WebPage/EventDispatcher.cpp:
(WebKit::updateWheelEventTestTriggersIfNeeded):

Canonical link: https://commits.webkit.org/162443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183605 268f45cc-cd09-0410-ab3c-d52691b4dbfc