Source/WebKit2/WebProcess/WebPage/EventDispatcher.cpp
@@ -88,6 +88,7 @@ void EventDispatcher::initializeConnection(IPC::Connection* connection)
     connection->addWorkQueueMessageReceiver(Messages::EventDispatcher::messageReceiverName(), &m_queue.get(), this);
 }
 
+#if ENABLE(CSS_SCROLL_SNAP) || ENABLE(RUBBER_BANDING)
 static void updateWheelEventTestTriggersIfNeeded(uint64_t pageID)
 {
     WebPage* webPage = WebProcess::singleton().webPage(pageID);
@@ -98,6 +99,7 @@ static void updateWheelEventTestTriggersIfNeeded(uint64_t pageID)
 
     page->testTrigger()->deferTestsForReason(reinterpret_cast<WheelEventTestTrigger::ScrollableAreaIdentifier>(page), WheelEventTestTrigger::ScrollingThreadSyncNeeded);
 }
+#endif
 
 void EventDispatcher::wheelEvent(uint64_t pageID, const WebWheelEvent& wheelEvent, bool canRubberBandAtLeft, bool canRubberBandAtRight, bool canRubberBandAtTop, bool canRubberBandAtBottom)
 {
